[package]
name = "include-bytes-zstd-macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/include-bytes-zstd"
repository = "https://github.com/daac-tools/include-bytes-zstd"
readme = "README.md"
keywords = ["compression", "zstandard", "zstd"]
categories = ["compression"]

[lib]
proc_macro = true

[dependencies]
syn = "1.0" # MIT or Apache-2.0
zstd = "0.12.3+zstd.1.5.2" # MIT
proc-macro-crate = "1.3" # MIT or Apache-2.0
