[package]
name = "include-bytes-zstd"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/include-bytes-zstd"
repository = "https://github.com/daac-tools/include-bytes-zstd"
readme = "README.md"
keywords = ["compression", "zstandard", "zstd"]
categories = ["compression"]

[dependencies]
include-bytes-zstd-macro = { path = "../include-bytes-zstd-macro", version = "0.1.0" }
ruzstd = "0.3.0" # MIT
